# $Id$

2009-12-17
 * Code refactoring: Network, NodeGroup, Node inherit from HotspotGraphElement (#677)

2009-12-08
 * Added the concept of node group and hierarchy (in a not too clean way to start with, I will refactor the code before adding new functionalities to nodes and groups) (#246)
 * Login and signup and logout script now receive the mac address as parameter (#675)
 * Initial abuse control verification now made with the mac address (#676)
 
2009-10-30 Geneviève Bastien <gbastien@versatic.net>
  * Network can now be set as case insensitive.  Emails are now never case sensitive and usernames' case sensitivity is consistent with network settings (#616)
  * Yet again some tab alignment
  
2009-10-02 Geneviève Bastien <gbastien@versatic.net>
  * Email address format now corresponds to newer standard RFC2822 (#624)
  * Corrected typos and tab alignment

2009-09-18 Geneviève Bastien <gbastien@versatic.net>
  * Fixed #502 (Note: this fix works only if all gateways have config value SSLAvailable Yes, or else the server determines that even though the connection originated from HTTP by those gateways, it should use SSL and in this case, the port is not right.  Should need a way to specify port in Wifidog Virtual Hosts or get the apache port)
  * Some realignment of tabs while documenting

2009-08-20 Genevieve Bastien <gbastien@versatic.net>
  * Updated dependencies  #599
  * Now gets the temp dir of the OS instead of hardcoding the /tmp dir in the install script #588

2009-07-26 Robin Jones
	* Addded New Geocoders Yahoo and Google.
	* Geocoder now defaults to google if no country specific Geocoder is found (in future, this will be made selectable by network)
	* Fixed Postcode search on Find Hotspot Map #436
	* Added search for user by email closes #417
	* Added validation to networkID to stop database errors, closes #458
	

2009-07-10 Benoit Grégoire <benoitg@coeus.ca>
	* Fix bug editing user profiles introduced in [1339].
